--- a/xbook-frontend/src/components/command/command.scss
+++ b/xbook-frontend/src/components/command/command.scss
@@ -2,8 +2,11 @@ span {
   color: #fff;
 }
 
-input {
+input[type='text'] {
   background-color: #000;
   border: 0px;
   color: #fff;
+  font-family: 'Roboto', monospace;
+  font-size: 16px;
+  width: 95%;
 }
